[package]
name = "easy-cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_mod_picking = "0.11.0"
bevy-inspector-egui = "0.17.0"
#bevy_transform_gizmo = { git = "https://github.com/woodroww/my_bevy_transform_gizmo" }
bevy_transform_gizmo = { path = "../my_bevy_transform_gizmo/" }
