[package]
name = "easy-cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0" }
#bevy_mod_picking = "0.11.0"
# this is somebody's fork updating to bevy .10
bevy_mod_picking = { git = "https://github.com/Fincap/bevy_mod_picking.git", branch = "migrate-bevy-0.10.0" }
bevy-inspector-egui = "0.18.0"
#bevy_transform_gizmo = { git = "https://github.com/woodroww/my_bevy_transform_gizmo" }
bevy_transform_gizmo = { path = "../my_bevy_transform_gizmo/" }
bevy_egui = { version = "0.20.1", features = ["immutable_ctx"] }
