[package]
name = "easy-cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0" }
bevy_mod_picking = "0.12.0"
bevy-inspector-egui = "0.18.3"
bevy_transform_gizmo = { path = "../my_bevy_transform_gizmo/" }
bevy_egui = { version = "0.20.3", features = ["immutable_ctx"] }
